# HW-CPP

./: .gitignore  README.md
Lesson_1/task_1/: task_1.cpp  task_1.sln  task_1.vcxproj  task_1.vcxproj.filters
Lesson_10/task_10.1/: CMakeLists.TXT  main_10.1.cpp
Lesson_10/task_10.2/: CMakeLists.TXT  Figure.h  Parallelogram.cpp  Quadrilateral.h  RightTriangle.h  main_10.2.cpp
Lesson_11/task_11.3/: CMakeLists.txt  Leave_cls.cpp  Leave_cls.h  main_11.3.cpp
Lesson_11/task_11.5/: CMakeLists.txt  EquilateralTriangle.cpp  Figure.cpp  RightTriangle.cpp  Square.cpp  Triangle.h  main_11.5.cpp  main_lib.cpp  main_lib.h
Lesson_2/taks_1/: main_1.cpp  taks_1.sln  taks_1.vcxproj  taks_1.vcxproj.filters
Lesson_2/task_2/: main_2.1.cpp  task_2.sln  task_2.vcxproj  task_2.vcxproj.filters
Lesson_2/task_3/: main_2.3.cpp  task_3.sln  task_3.vcxproj  task_3.vcxproj.filters
Lesson_3/task_3.1/: main_3.1.cpp  task_3.1.sln  task_3.1.vcxproj  task_3.1.vcxproj.filters
Lesson_3/task_3.2/: main_3.2.cpp  (+3 more)
Racing/: AirVehicleClass.cpp  AirVehicleClass.h  AllTerrainBootsClass.cpp  BroomClass.h  CamelClass.cpp  CamelClass.h  CentaurClass.cpp  EagleClass.h  GroundVehicleClass.cpp  GroundVehicleClass.h  RaceClass.cpp  RaceClass.h  Racing.sln  Racing.vcxproj  Racing.vcxproj.filters  SpeedCamel.cpp  SpeedCamelClass.h  StartGame.cpp  StartGame.h  VehicleClass.cpp  VehicleClass.h  main.cpp
Racing_Simulator/: AirVehicleClass.h  AllTerrainBootsClass.h  BroomClass.cpp  CMakeLists.txt  CamelClass.cpp  CarpetPlaneClass.cpp  CarpetPlaneClass.h  CentaurClass.h  EagleClass.CPP  GroundVehicleClass.cpp  GroundVehicleClass.h  RaceClass.cpp  SpeedCamelClass.cpp  StartGame.cpp  StartGame.h  VehicleClass.cpp  VehicleClass.h  main.cpp
(+132 files in other folders)
